# be-scan

./: .gitignore  .readthedocs.yaml  LICENSE.txt  NZL10196-Guide-Annotation-v3.3.py  README.md  environment.yml  guides_1_pam_window.csv  guides_2_no_repeats.csv  guides_prelim.csv  pyproject.toml  temp.csv  test.ipynb
be_scan/: __init__.py  __main__.py  control.py  main.py
be_scan/analysis/: JW_test.py  __init__.py  _controls_.py  _count_reads.py  _nanopore.py  _sanger.py  average_reps.py  batch_process.py  calc_controls.py  compare_conds.py  count_reads.py  dms_count_reads.py  library_qc.py  log_transform.py  merge_and_norm.py
be_scan/example/: SampleData-PRC2-[WT-Dropout-ABE].csv
be_scan/figure_plot/: __init__.py  figure_boxplot.py  figure_classes.py  figure_clustered_heatmap_helpers.py  figure_clustered_heatmap_main.py  figure_correlation_scatterplot.py  figure_jitterplot.py  figure_loess_helpers.py  figure_loess_main.py  figure_loess_plot.py  figure_lollipop.py  figure_pwes_helpers.py  figure_pwes_main.py  figure_pwes_plot.py  figure_scatterplot.py  load_bfact.py
be_scan/plot/: 1d_smoothing.py  3d_clustering.py  _PWES_heatmap_.py  __init__.py  _annotating_.py  _boxes_.py  _clustering_.py  _clusterplot_.py  _correlation_heatmap_.py  _correlation_scatter_.py  _interaction_scores_.py  _scatter_.py  _scatterbox_.py  _wap_histogram_cdf_.py  boxes.py  boxplot.py  clustering.py  clustering_helper.py  clustering_helpers.py  clustering_plots.py  correlation_heatmap.py  correlation_jointplot.py  correlation_scatter.py  loess_smoothing.py  mapping.py  run.py  scatterplot.py  sgrna_enrichment.py
be_scan/sgrna/: ACtoGT_guides_by_aa.csv  __init__.py  (+34 more)
bigscam/: __init__.py  main.py
docs/: README.md  requirements.txt
outputs/: annotated_guides.csv  annotated_guides_clinvar_check.csv
tests/: conftest.py  test_cli_lint.py  test_count_reads.py  test_sanger.py
(+185 files in other folders)
