[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigscam"
version = "0.0.2"
authors = [
  { name="Calvin Hu", email="xiaohu@g.harvard.edu" },
  { name="Simon P Shen", email="simonshen@fas.harvard.edu" },
]
description = "A package for CRISPR screening computational tools"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "matplotlib",
  "seaborn",
  "pandas",
  "scikit-learn",
  "biopython"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/liaulab/bigscam"
