[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "be_scan"
version = "0.0.2"
authors = [
  { name="Calvin Hu", email="xiaohu@g.harvard.edu" },
  { name="Simon P Shen", email="simonshen@fas.harvard.edu" },
]
description = "A package for CRISPR screening computational tools"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "matplotlib",
  "seaborn",
  "pandas",
  "scikit-learn",
  "biopython",
  "pyahocorasick", 
  "biopandas", 
  "plotly", 
  "scipy", 
  "statsmodels", 
]

[project.optional-dependencies]
test = [
    "pytest"
]
docs = [
    "sphinx", 
    "myst-parser",
    "furo",
    "sphinx-autobuild",
    "nbsphinx",
    "pandoc",
    "sphinxcontrib-napoleon",
]

[project.urls]
"Homepage" = "https://github.com/liaulab/be_scan"

[project.scripts]
be_scan = "be_scan.main:main"
